# solana-token

./: Anchor.toml  README.md  package-lock.json  package.json
programs/token-contract/: Cargo.toml
programs/token-contract/src/: lib.rs
tests/: token-contract.ts
